bin_PROGRAMS= TMTDiscover
TMTDiscover_SOURCES= main.cpp \
					 preprocess.cpp \
					 stdafx.cpp \
					 test.cpp 
TMTDiscover_CXXFLAGS= -std=c++11
TMTDiscover_LDADD=
TMTDiscover_LDFLAGS=
TMTDiscover_DEPENDENCIES=
noinst_HEADERS= runner.h util.h preprocess.h 

lib_LIBRARIES=

include_HEADERS=

data_DATA= 

